<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>android_nuguApp</groupId>
  <artifactId>android_nuguApp</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>
	
  <name>android_nuguApp</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

	<repositories>
 		<repository>
    	<id>Appium-unit-lib</id>
    	<url>https://github.com/ksszidane/Appium-unit-lib/tree/mvn-repo</url>
    	<snapshots>
        	<enabled>true</enabled>
        	<updatePolicy>always</updatePolicy>
    	</snapshots>
		</repository>
	</repositories>

  <dependencies>	
    
    <!-- -->
  	<dependency>
  		<groupId>com.github.ksszidane</groupId>
  		<artifactId>Appium-unit-lib</artifactId>
  		<version>0.0.07</version>
	</dependency>
	
	<dependency>
		<groupId>com.squareup.okhttp3</groupId>
		<artifactId>okhttp</artifactId>
		<version>4.2.2</version>
	</dependency>
	
	<dependency>
		<groupId>com.googlecode.json-simple</groupId>
		<artifactId>json-simple</artifactId>
		<version>1.1</version>
  	</dependency>


  
  </dependencies>
  
  <build>
		 <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                	<!--  <forkMode>never</forkMode>  -->
                	<encoding>UTF-8</encoding>
					<outputEncoding>UTF-8</outputEncoding>
                	<systemPropertyVariables>
						<org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
					</systemPropertyVariables>
                 	<properties>
						<property>
							<name>listener</name>
							<value>org.uncommons.reportng.HTMLReporter</value>
						</property>
					</properties>
					<suiteXmlFiles>
                    	<suiteXmlFile>main_suite.xml</suiteXmlFile>
                 	 </suiteXmlFiles>
					<workingDirectory>target/</workingDirectory>
					<argLine>
						 -Xms1024m -Xmx2048m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8
					</argLine>	
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
					<outputEncoding>UTF-8</outputEncoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>
